# Manga-AI-Studio

./: .dockerignore  .env.alpha.example  .env.example  .env.prod.example  .env.test.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.prod.example.yml  docker-compose.yml  package.json  pnpm-lock.yaml
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/app/: __init__.py
services/api/manga_api/: __init__.py  access.py  ai_tasks.py  auth.py  commands.py  compositor.py  config.py  db.py  demo_pipeline.py  director.py  evaluation.py  exporting.py  founder_demo.py  layout_planner.py  lettering.py  llm.py  main.py  models.py  observability.py  pacing.py  panel_render_director.py  provenance.py  provider_registry.py  publishing.py  qa.py  qa_autofix.py  queue.py  reference_pack.py  rendering.py  safety.py  schemas.py  storage.py  style_guard.py  uploads.py  versioning.py
services/api/tests/: conftest.py  test_ai_task_registry.py  test_alpha_launch_ops.py  test_alpha_readiness.py  test_auth_isolation.py  test_character_consistency.py  test_command_center.py  test_demo_pipeline.py  test_director_pipeline.py  test_evaluation_harness.py  test_full_manga_pipeline.py  test_integration_pipeline.py  test_labs.py  test_layout_intelligence.py  test_lettering_system.py  test_manga_qa.py  test_models.py  test_pacing_intelligence.py  test_page_composition.py  test_page_layout.py  test_panel_render_director.py  test_product_learning.py  test_production_security.py  test_project_crud.py  test_style_dna.py  (+6 more)
services/worker/: Dockerfile  pyproject.toml
(+207 files in other folders)
