[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manga-ai-worker"
version = "0.1.0"
description = "Celery worker for Manga AI Studio render jobs."
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.35,<2",
  "celery>=5.4,<6",
  "httpx>=0.27,<1",
  "openai>=1.99,<3",
  "pillow>=11,<12",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.6,<3",
  "redis>=5,<7",
  "sqlmodel>=0.0.22,<0.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["manga_worker*"]
